<resources>
    <string name="app_name">LEGIONofLENDAS</string>
    <string name="ChooseImage">Escolha um Personagem</string>
    <string name="btn_selec_img">Selecionar</string>
    <string name="level_integer">0</string>
    <string name="level">Nivel</string>
    <string name="experience">Exp</string>
    <string name="Fight">Lutar</string>
    <string name="upgrade_status">Melhorar Habilidades</string>
    <string name="current_xp">Pontos:</string>
    <string name="current_xp_integer">10000</string>
    <string name="qr_helper_text">Partilhe este codigo QR</string>
    <string name="register">Criar Conta</string>
    <string name="username">Nome:</string>
    <string name="password">Senha</string>
    <string name="create_account">REGISTAR</string>
    <string name="already_registed">É UM JOGADOR REGISTADO? INICIE SESSÃO AQUI!</string>
    <string name="create_account_login">AINDA NÃO TEM UMA CONTA? CRIE UMA AQUI!</string>
    <string name="login_text">INICIAR SESSÃO</string>
    <string name="username_login">NOME:</string>
    <string name="password_loggin">SENHA</string>
    <string name="play_login_btn">JOGAR</string>
    <string name="main_menu_store">LOJA</string>
    <string name="main_menu_rank">RANKING</string>
    <string name="main_menu_inventory">INVENTÁRIO</string>
    <string name="main_menu_upgrade_habilities">MELHORAR HABILIDADES</string>
    <string name="main_menu_start_fight">LUTA</string>
    <string name="main_menu_level">NIVEL:</string>
    <string name="main_menu_exp">EXP:</string>
    <string name="main_menu_username">"NOME: "</string>
    <string name="main_menu_logout">SAIR</string>
    <string name="main_menu_level_update">"NÍVEL: "</string>
    <string name="main_menu_exp_update">"EXP: "</string>
    <string name="fight_qrcode">LUTAR</string>
    <string name="result_text_default">Leia o QRCODE para inicar a luta</string>
    <string name="value_check">Leia o QRCODE para inicar a luta</string>
    <string name="btn_logout_main_menu">Sair</string>
    <string name="return_main_menu">VOLTAR AO MENU PRINCIPAL</string>
    <string name="level_battle">Nível</string>
    <string name="level_battle2">Nível</string>
    <string name="life_battle">Vida</string>
    <string name="life_battle2">Vida</string>
    <string name="name_battle">Nome</string>
    <string name="name_battle2">Nome</string>
    <string name="round_battle">RONDA</string>
    <string name="Shop_text">Compre aqui os seus itens</string>
    <string name="Level_UP">Subir de Nível</string>
    <string name="Plus_Force">Mais Força</string>
    <string name="Plus_Life">Mais Vida</string>
    <string name="Plus_Magic">Mais Magia</string>
    <string name="Fight_Options">OPÇÕES DE LUTA</string>
    <string name="Play_PVP" >JOGAR CONTRA JOGADORES</string>
    <string name="Play_BOT">JOGAR CONTRA UM BOT</string>
    <string name="Play_FRIEND" >JOGAR CONTRA UM AMIGO</string>
    <string name="SuccessLogin">LOGIN COM SUCESSO</string>
    <string name="ErrorLogin">ERRO! NOME OU SENHA INCORRETO</string>
    <string name="Item_Name">Nome:</string>
    <string name="STR">Força:</string>
    <string name="Item_Buy">Comprar</string>
    <string name="Item_Price">Preço:</string>
    <string name="HP">Vida:</string>
    <string name="Magic_Defence">Defesa Mágica:</string>
    <string name="Defence">Defesa:</string>
    <string name="Magic">Magia:</string>
    <string name="shopAvatarDescription">Imagem do Item</string>
    <string name="Item_Bought">Item Comprado!</string>
    <string name="Item_Not_Bought">Não tem experiencia suficiente!</string>
    <string name="Skip_Fight">Passar batalha à frente</string>
    <string name="Avaliable_Points">Pontos A Atribuir:</string>
    <string name="avatar">Avatar</string>
    <string name="won">Venceu:</string>
    <string name="lost">Perdeu:</string>
</resources>