<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_intro"
    tools:context=".MenuPrincipal">


    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="227dp"
        android:layout_height="81dp"
        android:alpha=".66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoin" />


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="392dp"
        android:layout_height="219dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagelogo"
        app:useDefaultMargins="true">


        <Button
            android:id="@+id/btn_loja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#857A542B"
            android:text="@string/main_menu_store"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#857A542B"
            android:text="@string/main_menu_rank"
            android:textColor="#ffffff"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn_inventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#857A542B"
            android:text="@string/main_menu_inventory"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn_habilidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#857A542B"
            android:text="@string/main_menu_upgrade_habilities"
            android:textColor="#ffffff"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn_luta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#857A542B"
            android:text="@string/main_menu_start_fight"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="404dp"
        android:layout_height="246dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <TextView
            android:id="@+id/textusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/main_menu_username"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textnivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/main_menu_level"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textexp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/main_menu_exp"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowSpan="3" />


    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#857A542B"
        android:text="@string/main_menu_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>