<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnWeight="1"
    android:background="@drawable/back_1"
    tools:context=".ParseBatalha">

    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="205dp"
        android:layout_height="99dp"
        android:alpha=".66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoin" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridluta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_left"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:progress="100"
            android:progressTint="#E10B0B"
            android:scaleY="5"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="5" />

        <TextView
            android:id="@+id/textRonda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/round_battle"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <TextView
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name_battle2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <TextView
            android:id="@+id/username2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name_battle"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imgAvatar1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowSpan="3"
            app:srcCompat="@drawable/ava4" />

        <ImageView
            android:id="@+id/imgAvatar2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:rotation="0"
            android:scaleX="-1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowSpan="2"
            app:srcCompat="@drawable/ava7" />


        <TextView
            android:id="@+id/usernivel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/level_battle2"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="6" />


        <TextView
            android:id="@+id/usernivel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/level_battle"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="6" />

        <ProgressBar
            android:id="@+id/pb_right"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progress="100"
            android:progressTint="#E10B0B"
            android:scaleX="-1"
            android:scaleY="5"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="5" />


    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#DF7A542B"
        android:text="@string/return_main_menu"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>